<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.moe.androidlabs.ListItemsActivity">


    <RadioButton
        android:text="@string/RadioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/radioBotton"
        android:layout_row="0"
        android:layout_column="0" />

    <CheckBox
        android:text="@string/CheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_row="0"
        android:layout_column="1" />

    <Switch
        android:text="@string/SwitchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/switchItem"
        android:checked="false"
        android:layout_row="1"
        android:layout_column="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/imageButton"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@android:drawable/btn_star_big_on" />
</GridLayout>
